--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css">
+
 </head>
 
 <body>
@@ -19,51 +20,62 @@
             </div>
         </div>
         <div class="fullstack_Text_div">
-            <h1>
-                FULL Stack
-            </h1>
-            <h1>
-                FULL Fantacy
+            <h1 class="title">
+                Full Stack <br />
+                Full Fantacy
             </h1>
 
         </div>
-        <div class="BoothTime_logo">
+        <div class="BoothTime_logo ">
+
             <div class="BoothTime_text">
-
-                <ul>
-                    <li> While at relnvet , stop by the </li>
-                    <li> Prosimo booth and say hi to the</li>
-                    <li> team. We'll be sharing Network </li>
-                    <li> knowledge , demo's and more.</li>
-                    <li> Come by play plinko for prizes! </li>
-                </ul>
+                <h3 class="h3">Booth time!</h3>
+                <label class="label"> While at relnvet , stop by the </label><br />
+                <label class="label"> Prosimo booth and say hi to the</label><br />
+                <label class="label"> team. We'll be sharing Network </label><br />
+                <label class="label"> knowledge , demo's and more.</label><br />
+                <label class="label"> Come by play plinko for prizes! </label><br />
             </div>
-            <div class="logo_842">
-
+            <div class="logo_842 ">
+                <img class="img1" src="..\assets\Images\logo-frame.svg" />
+                <img class="img2" src="..\assets\Images\logo-text.png" />
             </div>
-
         </div>
+
 
         <div class="Topgolf">
-            <div class="Topgolf_logo_Text">
-                <div>
-
-                </div>
-                <div class="Topgolf_Downtimetext">
-                    <ul>
-                        <li> Downtime from re:Invent </li>
-                        <li> activities is always needed</li>
-                        <li> Join the Prosimo team for</li>
-                        <li> Links & drinks at Top Golf!</li>
-                    </ul>_
-                </div>
+            <div class="golf-title">
+                <h1 class="title">
+                    Full Stack<br />
+                    Full Swing
+                </h1>
+                <li class="li">Work on your swing</li>
+                <li class="li"> Network with likeminded peers</li>
+                <li class="li"> Unwind with a beverage</li>
+                <li class="li"> Talk shop and learn</li>
             </div>
+            <img class="img" src="..\assets\Images\golf.png" />
             <div class="TopGolf_Text_Form">
-
-                <div class="Form_Area">
-                    <form class="">
-
-                    </form>
+                <div class="Topgolf_logo_Text">
+                    <div>
+                        Prosimo + TopGolf
+                    </div>
+                    <div class="Topgolf_Downtimetext">
+                        <p> Downtime from re:Invent activities</p>
+                        <p> is always needed.Join the Prosimo</p>
+                        <p> team for links & drinks at Top Golf!</p>
+                    </div>
+                    <div class="Form_Area">
+                        <h3 class="h3">Sign Up</h3>
+                        <form class="form">
+                          <input class="input" placeholder="First name"/>
+                          <input class="input" placeholder="Last name"/>
+                          <input class="input" placeholder="Email"/>
+                          <input class="input" placeholder="Company"/>
+                          <input class="input" placeholder="Phone"/>
+                          <input class="submit" value="Register Now" />
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -72,45 +84,39 @@
         <div class="Packet_Pushers">
 
             <div class="Packet_Pushers_logo">
-                <div  class="two_menPic_mic" ></div>
-                <div  class="packet_img"></div>
+                <div class="two_menPic_mic"></div>
+                <div class="packet_img"></div>
             </div>
             <div class="Packet_Pushers_Text">
-                <h4>Packet Pushers Title </h4>
+                <h4 class="h4">Packet Pushers Title </h4>
 
-                <ul>
-                    <li> Full stack autonomous networking </li>
-                    <li> sounds a little like fantacy , but it's </li>
-                    <li> on the brink of becoming the new </li>
-                    <li> normal way to network </li>
-                    <li> cloud . Learn as X and Y speakers </li>
-                    <li> talk about X and Y during this live </li>
-                    <li> podcast</li>
-                </ul>
+                <p class="para"> Full stack autonomous networking </p>
+                <p class="para"> sounds a little like fantacy , but it's </p>
+                <p class="para"> on the brink of becoming the new </p>
+                <p class="para"> normal way to network </p>
+                <p class="para"> cloud . Learn as X and Y speakers </p>
+                <p class="para"> talk about X and Y during this live </p>
+                <p class="para"> podcast</p>
+                <br />
+                <p class="para"> Oh, and keep an eye out for </p>
+                <p class="para"> mermaids :)</p>
 
-                <ul>
-                    <li> Oh, and keep an eye out for </li>
-                    <li> mermaids :)</li>
-                </ul>
             </div>
 
         </div>
         <div class="wina_watch_div">
-            <div>
-                <ul>
-                    <li>Win a</li>
-                    <li> Huboldt</li>
-                    <li> Watch </li>
-                </ul>
+            <div class="text-1">
+                <p class="p-white">Win a</p>
+                <p class="para"> Humboldt</p>
+                <p class="p-white"> Watch </p>
             </div>
-            <div>
-                <ul>
-                    <li>Register to attend</li>
-                    <li> and automatically </li>
-                    <li> be entered to win </li>
-                </ul>
+            <div class="text-2">
+                <img class="img" src="..\assets\Images\arrowUp.png" alt=""/>
+                <p class="para">Register to attend</p>
+                <p class="para"> and automatically </p>
+                <p class="para"> be entered to win </p>
             </div>
-        </div>
+
 
     </section>
 </body>
