--- a/index.html
+++ b/index.html
@@ -68,12 +68,19 @@
                     <div class="Form_Area">
                         <h3 class="h3">Sign Up</h3>
                         <form class="form">
-                          <input class="input" placeholder="First name"/>
-                          <input class="input" placeholder="Last name"/>
-                          <input class="input" placeholder="Email"/>
-                          <input class="input" placeholder="Company"/>
-                          <input class="input" placeholder="Phone"/>
-                          <input class="submit" value="Register Now" />
+                            <input class="input" placeholder="First name" />
+                            <input class="input" placeholder="Last name" />
+                            <input class="input" placeholder="Email" />
+                            <input class="input" placeholder="Company" />
+                            <input class="input" placeholder="Phone" />
+                            <!-- <div class="checkBok-div">
+                                <input type="checkbox" name="" id="in-person-meeting">
+                                <label for="scales">Schedule an in-person meeting with one of our cloud experts at Top
+                                    Golf</label>
+                                <input type="checkbox" name="" id="virtual-meeting">
+                                <label for="scales">Schedule a virtual meeting with one of our cloud experts</label>
+                            </div> -->
+                            <input class="submit" value="Register Now" />
                         </form>
                     </div>
                 </div>
@@ -111,7 +118,7 @@
                 <p class="p-white"> Watch </p>
             </div>
             <div class="text-2">
-                <img class="img" src="..\assets\Images\arrowUp.png" alt=""/>
+                <img class="img" src="..\assets\Images\arrowUp.png" alt="" />
                 <p class="para">Register to attend</p>
                 <p class="para"> and automatically </p>
                 <p class="para"> be entered to win </p>
