--- a/index.html
+++ b/index.html
@@ -11,82 +11,83 @@
 
 <body>
     <section class="main">
-        <div class="aws_prosimo">
-            <div class="aws_invent">
-                <img src="/assets/Images/Group 1820.png" alt="" srcset="">
+        <div class="container">
+            <div class="aws_prosimo">
+                <div class="aws_invent">
+                    <img src="/assets/Images/Group 1820.png" alt="" srcset="">
+                </div>
+                <div class="prosimo">
+                    <img src="/assets/Images/Group 1771.png" alt="">
+                </div>
             </div>
-            <div class="prosimo">
-                <img src="/assets/Images/Group 1771.png" alt="">
-            </div>
-        </div>
-        <div class="fullstack_Text_div">
-            <h1 class="title">
-                Full Stack <br />
-                Full Fantacy
-            </h1>
-
-        </div>
-        <div class="BoothTime_logo ">
-
-            <div class="BoothTime_text">
-                <h3 class="h3">Booth time!</h3>
-                <label class="label"> While at relnvet , stop by the </label><br />
-                <label class="label"> Prosimo booth and say hi to the</label><br />
-                <label class="label"> team. We'll be sharing Network </label><br />
-                <label class="label"> knowledge , demo's and more.</label><br />
-                <label class="label"> Come by play plinko for prizes! </label><br />
-            </div>
-            <div class="logo_842 ">
-                <img class="img1" src="..\assets\Images\logo-frame.svg" />
-                <img class="img2" src="..\assets\Images\logo-text.png" />
-            </div>
-        </div>
-
-
-        <div class="Topgolf">
-            <div class="golf-title">
+            <div class="fullstack_Text_div">
                 <h1 class="title">
-                    Full Stack<br />
-                    Full Swing
+                    Full Stack <br />
+                    Full Fantacy
                 </h1>
-                <li class="li">Work on your swing</li>
-                <li class="li"> Network with likeminded peers</li>
-                <li class="li"> Unwind with a beverage</li>
-                <li class="li"> Talk shop and learn</li>
+
             </div>
-            <img class="img" src="..\assets\Images\golf.png" />
-            <div class="TopGolf_Text_Form">
-                <div class="Topgolf_logo_Text">
-                    <div>
-                        Prosimo + TopGolf
-                    </div>
-                    <div class="Topgolf_Downtimetext">
-                        <p> Downtime from re:Invent activities</p>
-                        <p> is always needed.Join the Prosimo</p>
-                        <p> team for links & drinks at Top Golf!</p>
-                    </div>
-                    <div class="Form_Area">
-                        <h3 class="h3">Sign Up</h3>
-                        <form class="form">
-                            <input class="input" placeholder="First name" />
-                            <input class="input" placeholder="Last name" />
-                            <input class="input" placeholder="Email" />
-                            <input class="input" placeholder="Company" />
-                            <input class="input" placeholder="Phone" />
-                            <!-- <div class="checkBok-div">
+            <div class="BoothTime_logo ">
+
+                <div class="BoothTime_text">
+                    <h3 class="h3">Booth time!</h3>
+                    <label class="label"> While at relnvet , stop by the </label><br />
+                    <label class="label"> Prosimo booth and say hi to the</label><br />
+                    <label class="label"> team. We'll be sharing Network </label><br />
+                    <label class="label"> knowledge , demo's and more.</label><br />
+                    <label class="label"> Come by play plinko for prizes! </label><br />
+                </div>
+                <div class="logo_842 ">
+                    <img class="img1" src="..\assets\Images\logo-frame.svg" />
+                    <img class="img2" src="..\assets\Images\logo-text.png" />
+                </div>
+            </div>
+
+
+            <div class="Topgolf">
+                <div class="golf-title">
+                    <h1 class="title">
+                        Full Stack<br />
+                        Full Swing
+                    </h1>
+                    <li class="li">Work on your swing</li>
+                    <li class="li"> Network with likeminded peers</li>
+                    <li class="li"> Unwind with a beverage</li>
+                    <li class="li"> Talk shop and learn</li>
+                </div>
+                <img class="img" src="..\assets\Images\golf.png" />
+                <div class="TopGolf_Text_Form">
+                    <div class="Topgolf_logo_Text">
+                        <div>
+                            Prosimo + TopGolf
+                        </div>
+                        <div class="Topgolf_Downtimetext">
+                            <p> Downtime from re:Invent activities</p>
+                            <p> is always needed.Join the Prosimo</p>
+                            <p> team for links & drinks at Top Golf!</p>
+                        </div>
+                        <div class="Form_Area">
+                            <h3 class="h3">Sign Up</h3>
+                            <form class="form">
+                                <input class="input" placeholder="First name" />
+                                <input class="input" placeholder="Last name" />
+                                <input class="input" placeholder="Email" />
+                                <input class="input" placeholder="Company" />
+                                <input class="input" placeholder="Phone" />
+                                <!-- <div class="checkBok-div">
                                 <input type="checkbox" name="" id="in-person-meeting">
                                 <label for="scales">Schedule an in-person meeting with one of our cloud experts at Top
                                     Golf</label>
                                 <input type="checkbox" name="" id="virtual-meeting">
                                 <label for="scales">Schedule a virtual meeting with one of our cloud experts</label>
                             </div> -->
-                            <input class="submit" value="Register Now" />
-                        </form>
+                                <input class="submit" value="Register Now" />
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
 
         <div class="Packet_Pushers">
 
