--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <section class="main">
-        <div class="container">
+        <div class="group-1">
             <div class="aws_prosimo">
                 <div class="aws_invent">
                     <img src="/assets/Images/Group 1820.png" alt="" srcset="">
@@ -23,7 +23,7 @@
             <div class="fullstack_Text_div">
                 <h1 class="title">
                     Full Stack <br />
-                    Full Fantacy
+                    Full Fantasy
                 </h1>
 
             </div>
@@ -37,12 +37,10 @@
                     <label class="label"> knowledge , demo's and more.</label><br />
                     <label class="label"> Come by play plinko for prizes! </label><br />
                 </div>
-                <div class="logo_842 ">
-                    <img class="img1" src="..\assets\Images\logo-frame.svg" />
-                    <img class="img2" src="..\assets\Images\logo-text.png" />
-                </div>
             </div>
+        </div>
 
+        <div class="group-2">
 
             <div class="Topgolf">
                 <div class="golf-title">
@@ -54,6 +52,11 @@
                     <li class="li"> Network with likeminded peers</li>
                     <li class="li"> Unwind with a beverage</li>
                     <li class="li"> Talk shop and learn</li>
+                    <div>
+
+                        <img class="ball" src="assets/Images/Group 1927.png"/>
+                    </div>
+                    <img src="/assets/Images/Group 1929topgolf.png" alt="" srcset="">
                 </div>
                 <img class="img" src="..\assets\Images\golf.png" />
                 <div class="TopGolf_Text_Form">
@@ -78,9 +81,9 @@
                                 <input type="checkbox" name="" id="in-person-meeting">
                                 <label for="scales">Schedule an in-person meeting with one of our cloud experts at Top
                                     Golf</label>
-                                <input type="checkbox" name="" id="virtual-meeting">
-                                <label for="scales">Schedule a virtual meeting with one of our cloud experts</label>
-                            </div> -->
+                                    <input type="checkbox" name="" id="virtual-meeting">
+                                    <label for="scales">Schedule a virtual meeting with one of our cloud experts</label>
+                                </div> -->
                                 <input class="submit" value="Register Now" />
                             </form>
                         </div>
@@ -88,7 +91,9 @@
                 </div>
             </div>
         </div>
+    </section>
 
+    <section class="container-pc-pusher">
         <div class="Packet_Pushers">
 
             <div class="Packet_Pushers_logo">
@@ -112,6 +117,9 @@
             </div>
 
         </div>
+    </section>
+    <section class="container-watch">
+
         <div class="wina_watch_div">
             <div class="text-1">
                 <p class="p-white">Win a</p>
@@ -124,7 +132,6 @@
                 <p class="para"> and automatically </p>
                 <p class="para"> be entered to win </p>
             </div>
-
 
     </section>
 </body>
