--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                     <label class="label"> knowledge , demo's and more.</label><br />
                     <label class="label"> Come by play plinko for prizes! </label><br />
                 </div>
+                <div class="logo_842 ">
+                    <img class="img1" src="..\assets\Images\logo-frame.svg" />
+                    <img class="img2" src="..\assets\Images\logo-text.png" />
+                </div>
             </div>
         </div>
 
@@ -44,19 +48,21 @@
 
             <div class="Topgolf">
                 <div class="golf-title">
-                    <h1 class="title">
-                        Full Stack<br />
-                        Full Swing
-                    </h1>
-                    <li class="li">Work on your swing</li>
-                    <li class="li"> Network with likeminded peers</li>
-                    <li class="li"> Unwind with a beverage</li>
-                    <li class="li"> Talk shop and learn</li>
-                    <div>
-
-                        <img class="ball" src="assets/Images/Group 1927.png"/>
+                    <div class="text_list">
+                        <h1 class="title">
+                            Full Stack<br />
+                            Full Swing
+                        </h1>
+                        <li class="li">Work on your swing</li>
+                        <li class="li"> Network with likeminded peers</li>
+                        <li class="li"> Unwind with a beverage</li>
+                        <li class="li"> Talk shop and learn</li>
                     </div>
-                    <img src="/assets/Images/Group 1929topgolf.png" alt="" srcset="">
+                    <div class="ball_tail">
+
+                        <img class="ball" src="assets/Images/Group 1927.png" />
+                    </div>
+                    <img src="/assets/Images/Group 1929topgolf.png" alt="" srcset="" class="golfLogo">
                 </div>
                 <img class="img" src="..\assets\Images\golf.png" />
                 <div class="TopGolf_Text_Form">
@@ -77,13 +83,6 @@
                                 <input class="input" placeholder="Email" />
                                 <input class="input" placeholder="Company" />
                                 <input class="input" placeholder="Phone" />
-                                <!-- <div class="checkBok-div">
-                                <input type="checkbox" name="" id="in-person-meeting">
-                                <label for="scales">Schedule an in-person meeting with one of our cloud experts at Top
-                                    Golf</label>
-                                    <input type="checkbox" name="" id="virtual-meeting">
-                                    <label for="scales">Schedule a virtual meeting with one of our cloud experts</label>
-                                </div> -->
                                 <input class="submit" value="Register Now" />
                             </form>
                         </div>
