--- a/index.html
+++ b/index.html
@@ -11,127 +11,161 @@
 
 <body>
     <section class="main">
-        <div class="group-1">
-            <div class="aws_prosimo">
-                <div class="aws_invent">
-                    <img src="/assets/Images/Group 1820.png" alt="" srcset="">
-                </div>
-                <div class="prosimo">
-                    <img src="/assets/Images/Group 1771.png" alt="">
-                </div>
-            </div>
-            <div class="fullstack_Text_div">
-                <h1 class="title">
-                    Full Stack <br />
-                    Full Fantasy
-                </h1>
+        <div class="container">
 
-            </div>
-            <div class="BoothTime_logo ">
 
-                <div class="BoothTime_text">
-                    <h3 class="h3">Booth time!</h3>
-                    <label class="label"> While at relnvet , stop by the </label><br />
-                    <label class="label"> Prosimo booth and say hi to the</label><br />
-                    <label class="label"> team. We'll be sharing Network </label><br />
-                    <label class="label"> knowledge , demo's and more.</label><br />
-                    <label class="label"> Come by play plinko for prizes! </label><br />
+            <div class="group-1">
+                <div class="sub-container">
+                    <div class="aws_prosimo">
+                        <div class="aws_invent">
+                            <img src="/assets/Images/Group 1820.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="prosimo">
+                            <img src="/assets/Images/Group 1771.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
                 </div>
-                <div class="logo_842 ">
-                    <img class="img1" src="..\assets\Images\logo-frame.svg" />
-                    <img class="img2" src="..\assets\Images\logo-text.png" />
+
+                <div class="sub-group">
+                    <div class="fullstack_Text_div">
+                        <h2 class="title">
+                            Full Stack <br />
+                            Full Fantasy
+                        </h2>
+
+                    </div>
+                    <div class="BoothTime_logo ">
+                        <div class="BoothTime_text">
+                            <h3 class="h3">Booth time!</h3>
+                            <p>While at reInvent, stop by the Prosimo booth and say hi to the team. We’ll be sharing
+                                network
+                                knowledge, demo’s and more. Come by and play plinko for prizes!</p>
+                        </div>
+                        <div class="join_logo">
+                            <img src="assets/Images/logo-frame.svg" class="frame" alt="" width="255" />
+                            <img class="img2" src="..\assets\Images\logo-text.png" />
+                        </div>
+                    </div>
                 </div>
             </div>
+
+
+            <div class="group-2">
+                <div class="sub-group-1">
+                    <div class="Topgolf">
+                        <div class="col-half">
+                            <div class="golf_pic">
+                                <img src="assets/Images/golf.png" alt="" />
+                            </div>
+                            <div class="golf-title">
+                                <h1 class="title">
+                                    Full Stack<br />
+                                    Full Swing
+                                </h1>
+                                <ul class="listing">
+                                    <li class="li">Work on your swing</li>
+                                    <li class="li"> Network with likeminded peers</li>
+                                    <li class="li"> Unwind with a beverage</li>
+                                    <li class="li"> Talk shop and learn</li>
+                                </ul>
+                                <div class="golf_stick">
+                                    <img class="ball" src="assets/Images/Group 1927.png" />
+                                </div>
+                                <div class="golf_logo">
+                                    <img src="/assets/Images/Group 1929topgolf.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="TopGolf_Text_Form">
+                            <div class="Topgolf_logo_Text">
+                                <div class="prosimo_Logo">
+                                    Prosimo + TopGolf
+                                </div>
+                                <div class="Topgolf_Downtimetext">
+                                    <p> Downtime from re:Invent activities</p>
+                                    <p> is always needed.Join the Prosimo</p>
+                                    <p> team for links & drinks at Top Golf!</p>
+                                </div>
+                                <div class="Form_Area" id="submitForm">
+                                    <h3 class="h3">Sign up</h3>
+                                    <form class="form">
+                                        <input class="input" placeholder="First name" />
+                                        <input class="input" placeholder="Last name" />
+                                        <input class="input" placeholder="Email" />
+                                        <input class="input" placeholder="Company" />
+                                        <input class="input" placeholder="Phone" />
+                                        <div class="checkBox-div">
+                                            <input type="checkbox" class="checkbox" name="" id="in-person-meeting">
+                                            <small class="small">Schedule an in-person meeting with one of our cloud
+                                                experts at Top
+                                                Golf</small>
+                                        </div>
+                                        <div class="checkBox-div-1">
+                                            <input type="checkbox" class="checkbox" name="" id="virtual-meeting">
+                                            <small class="small">Schedule a virtual meeting with one of our cloud
+                                                experts</small>
+                                        </div>
+                                        <button type="button" class="submit"> Register Now</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
-        <div class="group-2">
-
-            <div class="Topgolf">
-                <div class="golf-title">
-                    <div class="text_list">
-                        <h1 class="title">
-                            Full Stack<br />
-                            Full Swing
-                        </h1>
-                        <li class="li">Work on your swing</li>
-                        <li class="li"> Network with likeminded peers</li>
-                        <li class="li"> Unwind with a beverage</li>
-                        <li class="li"> Talk shop and learn</li>
-                    </div>
-                    <div class="ball_tail">
-
-                        <img class="ball" src="assets/Images/Group 1927.png" />
-                    </div>
-                    <img src="/assets/Images/Group 1929topgolf.png" alt="" srcset="" class="golfLogo">
-                </div>
-                <img class="img" src="..\assets\Images\golf.png" />
-                <div class="TopGolf_Text_Form">
-                    <div class="Topgolf_logo_Text">
-                        <div>
-                            Prosimo + TopGolf
-                        </div>
-                        <div class="Topgolf_Downtimetext">
-                            <p> Downtime from re:Invent activities</p>
-                            <p> is always needed.Join the Prosimo</p>
-                            <p> team for links & drinks at Top Golf!</p>
-                        </div>
-                        <div class="Form_Area">
-                            <h3 class="h3">Sign Up</h3>
-                            <form class="form">
-                                <input class="input" placeholder="First name" />
-                                <input class="input" placeholder="Last name" />
-                                <input class="input" placeholder="Email" />
-                                <input class="input" placeholder="Company" />
-                                <input class="input" placeholder="Phone" />
-                                <input class="submit" value="Register Now" />
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </section>
 
     <section class="container-pc-pusher">
-        <div class="Packet_Pushers">
+        <div class="container">
+            <div class="sub-Container">
+                <div class="Packet_Pushers">
 
-            <div class="Packet_Pushers_logo">
-                <div class="two_menPic_mic"></div>
-                <div class="packet_img"></div>
+                    <div class="Packet_Pushers_logo">
+                        <img src="assets/Images/Frame.svg" alt="" class="img-fluid" class="two_menPic_mic" />
+                        <img src="/assets/Images/Group 1685.png" alt="" srcset="" class="packet_img">
+                    </div>
+                    <div class="Packet_Pushers_Text">
+                        <h4 class="h4">Packet Pushers Title </h4>
+
+                        <p class="para"> Full stack autonomous networking
+                            sounds a little like fantacy , but it's
+                            on the brink of becoming the new
+                            normal way to network
+                            cloud . Learn as X and Y speakers
+                            talk about X and Y during this live
+                            podcast</p>
+                        <br />
+                        <p class="para"> Oh, and keep an eye out for mermaids :)</p>
+
+                    </div>
+
+                </div>
             </div>
-            <div class="Packet_Pushers_Text">
-                <h4 class="h4">Packet Pushers Title </h4>
-
-                <p class="para"> Full stack autonomous networking </p>
-                <p class="para"> sounds a little like fantacy , but it's </p>
-                <p class="para"> on the brink of becoming the new </p>
-                <p class="para"> normal way to network </p>
-                <p class="para"> cloud . Learn as X and Y speakers </p>
-                <p class="para"> talk about X and Y during this live </p>
-                <p class="para"> podcast</p>
-                <br />
-                <p class="para"> Oh, and keep an eye out for </p>
-                <p class="para"> mermaids :)</p>
-
-            </div>
-
         </div>
     </section>
+
     <section class="container-watch">
-
-        <div class="wina_watch_div">
-            <div class="text-1">
-                <p class="p-white">Win a</p>
-                <p class="para"> Humboldt</p>
-                <p class="p-white"> Watch </p>
+        <div class="container">
+            <div class="sub-Container">
+                <div class="wina_watch_div">
+                    <div class="text-1">
+                        <p class="p-white">Win a</p>
+                        <p class="para"> Humboldt</p>
+                        <p class="p-white"> Watch </p>
+                    </div>
+                    <div class="text-2">
+                        <a href="#submitForm">
+                            <img class="img" src="..\assets\Images\arrowUp.png" alt="" />
+                        </a>
+                        <p class="para">Register to attend and automatically be entered to win </p>
+                    </div>
+                </div>
             </div>
-            <div class="text-2">
-                <img class="img" src="..\assets\Images\arrowUp.png" alt="" />
-                <p class="para">Register to attend</p>
-                <p class="para"> and automatically </p>
-                <p class="para"> be entered to win </p>
-            </div>
-
     </section>
 </body>
 
