--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                 <div class="sub-group-1">
                     <div class="Topgolf">
                         <div class="col-half">
-                            <div class="golf_pic">
+                            <!-- <div class="golf_pic">
                                 <img src="assets/Images/golf.png" alt="" />
-                            </div>
+                            </div> -->
                             <div class="golf-title">
                                 <h1 class="title">
                                     Full Stack<br />
