--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -86,8 +86,12 @@
                             <div class="card-body col">
                                 <h5 class="card-title">HME(DME) Software</h5>
                                 <p class="card-text text">Improves your workflow to reduce your workload..</p>
-                                <a href="#" class="btn d-flex justify-content-between"> Learn More <i
-                                        class="fa fa-angle-down" style="font-size:24px; color: blue;"></i></a>
+                                <div class="info_hme" id="info_hme">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                                </div>
+                                <button href="#" class="btn d-flex justify-content-between"> Learn More <i
+                                        class="fa fa-angle-down" id="iHme"
+                                        style="font-size:24px; color: blue;"></i></button>
                             </div>
                         </div>
                     </div>
@@ -97,8 +101,11 @@
                             <div class="card-body col">
                                 <h5 class="card-title">Pharmacy Software</h5>
                                 <p class="card-text text">Utilise one system to manage your pharmacy.</p>
-                                <a href="#" class="btn d-flex justify-content-between">Go somewhere <i
-                                        class="fa fa-angle-down" style="font-size:24px  ; color: blue;"></i></a>
+                                <div class="info_pharma" id="info_pharma">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                                </div>
+                                <button id="ipharma" class="btn d-flex justify-content-between">Go somewhere <i
+                                        class="fa fa-angle-down" style="font-size:24px  ; color: blue;"></i></button>
                             </div>
                         </div>
                     </div>
@@ -109,8 +116,11 @@
                                 <h5 class="card-title">Orthotics& ProstheticSoftware</h5>
                                 <p class="card-text text">Gain a holistic view
                                     of your business.</p>
-                                <a href="#" class="btn d-flex justify-content-between"> Learn More <i
-                                        class="fa fa-angle-down" style="font-size:24px ; color: blue; "></i></a>
+                                <div class="info_OP" id="info_OP">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                                </div>
+                                <button href="#" id="iO&P" class="btn d-flex justify-content-between"> Learn More <i
+                                        class="fa fa-angle-down" style="font-size:24px ; color: blue; "></i></button>
                             </div>
                         </div>
                     </div>
