--- a/index.html
+++ b/index.html
@@ -31,47 +31,49 @@
                         <li class="nav-item nav-link "> About </li>
                         <li class="nav-item nav-link "> Blog </li>
                         <li class="nav-item nav-link "> Contact </li>
-                        <li class="nav-item nav-link"> <img src="/assets/images/Search.svg" alt="" srcset=""
-                                class="search">
+                        <li class="nav-item nav-link" id="searchBtn"> <img src="/assets/images/Search.svg" alt=""
+                                srcset="" class="search">
                         </li>
                     </ul>
-                    <button type="button" class="loginButton d-flex justify-content-center navbar-nav ms-auto"> <img
+                    <button type="button" class="loginButton d-flex justify-content-center flex-row navbar-nav "> <img
                             src="/assets/images/Login.svg" alt="" srcset="" class=" login"> Log in</button>
                 </div>
             </nav>
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="search">
         </div>
     </header>
     <section class="hero">
-        <div class="container-fluid">
+        <div class="bg-image">
+            <div class="container-fluid">
+                <div class="row help-div">
+                    <div class="col-lg-5 content">
+                        <div class="text_SB d-flex flex-column">
 
-            <div class="row help-div">
-                <div class="col-lg-5 content">
-                    <div class="text_SB d-flex flex-column">
+                            <h1 class=" StreamlineText">
+                                Streamline, increase revenue and improve patient care
+                            </h1>
 
-                        <h1 class=" StreamlineText">
-                            Streamline, increase revenue and improve patient care
-                        </h1>
+                            <p class=" BrightreeText">
 
-                        <p class=" BrightreeText">
+                                Brightree helps post-acute care providers optimize their businesses
+                            </p>
+                        </div>
 
-                            Brightree helps post-acute care providers optimize their businesses
-                        </p>
+                        <button type="button" class="talkwithusbutton">
+                            <div class="chat-Button"> <img src="/assets/images/Chat.svg" class="arrow" alt=""></div>
+                            <p> Talk to us</p>
+                        </button>
                     </div>
-
-                    <button type="button" class="talkwithusbutton">
-                        <div class="chat-Button"> <img src="/assets/images/Chat.svg" class="arrow" alt=""></div>
-                        <p> Talk to us</p>
-                    </button>
-                </div>
-                <div class="col-lg-6">
-                    <div class="image-7div">
-                        <img src="/assets/images/image7.png" alt="" srcset="">
+                    <div class="col-lg-6">
+                        <div class="image-7div">
+                            <img src="/assets/images/image7.png" alt="" srcset="">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section style="background: var(--blue-300, #EFFAFF);">
+    <section class="section-products">
         <div class="container-fluid">
             <div class="row products">
                 <div class="col-12 d-flex flex-column tags-div">
@@ -147,14 +149,18 @@
             <div class="row HME">
 
                 <div class="col-lg-5 d-flex flex-column secure">
-                    <img src="/assets/images/HME.svg" alt="" class="img">
-                    <h3 class="titleH3">
-                        Securely improve your HME business
-                    </h3>
-                    <p class="paraMain">
-                        Brightree’s cloud-based HME business management platform that improves your workflow to reduce
-                        your workload.
-                    </p>
+                    <div class="d-flex flex-column hme-content">
+
+                        <img src="/assets/images/HME.svg" alt="" class="img">
+                        <h3 class="titleH3">
+                            Securely improve your HME business
+                        </h3>
+                        <p class="paraMain">
+                            Brightree’s cloud-based HME business management platform that improves your workflow to
+                            reduce
+                            your workload.
+                        </p>
+                    </div>
 
                     <button type="button" class="btn-arrow-text">
                         <div class="arrow-Button"> <img src="/assets/images/Arrow-Link.svg" class="arrow" alt=""></div>
@@ -178,6 +184,16 @@
                 </div>
                 <div class="col-lg-6 image-12div">
                     <img src="/assets/images/image12.png" alt="" srcset="">
+
+                    <div class="card row quote hidden-card">
+                        <img src="/assets/images/Barbara-Leech-hero_quotes-960x6408.png" class="card-img-top" alt="...">
+                        <div class="card-body col">
+                            <p class="card-text quote-text">““All of the Brightree solutions help us streamline from
+                                intake to billing to collection. It’s vital to our business.””</p>
+                            <h5 class="card-title">Barb Leech</h5>
+                            <small>CEO, Healthline Medical Equipment</small>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -190,11 +206,13 @@
                     <img src="/assets/images/MicrosoftTeams-image.png" alt="" srcset="">
                 </div>
                 <div class="col-lg-6 frame213">
-                    <img src="/assets/images/Pharmacy.svg" alt="" class="img">
-                    <h3 class="titleH3"> Pharmacy software made simple</h3>
-                    <p class="paraMain">
-                        See how you can start utilizing one system to manage your pharmacy business with Brightree.
-                    </p>
+                    <div class="d-flex flex-column hme-content">
+                        <img src="/assets/images/Pharmacy.svg" alt="" class="img">
+                        <h3 class="titleH3"> Pharmacy software made simple</h3>
+                        <p class="paraMain">
+                            See how you can start utilizing one system to manage your pharmacy business with Brightree.
+                        </p>
+                    </div>
                     <button type="button" class="btn-arrow-text">
                         <div class="arrow-Button"> <img src="/assets/images/Arrow-Link.svg" class="arrow" alt=""></div>
                         Learn about our Pharmacy Software
@@ -221,12 +239,15 @@
             <div class="row O_P">
                 <div class="col-lg-5 frame flex-column">
                     <div class="frame157 d-flex flex-column">
-                        <img src="/assets/images/O&P.svg" alt="" class="img">
-                        <h3 class="titleH3">Orthotics and Prosthetics cloud-based solution</h3>
-                        <p class="paraMain">
-                            The only orthotics and prosthetics software endorsed by the Orthotic and Prosthetic Group of
-                            America. Track details while also gaining a holistic view of your business.
-                        </p>
+                        <div class="d-flex flex-column hme-content">
+                            <img src="/assets/images/O&P.svg" alt="" class="img">
+                            <h3 class="titleH3">Orthotics and Prosthetics cloud-based solution</h3>
+                            <p class="paraMain">
+                                The only orthotics and prosthetics software endorsed by the Orthotic and Prosthetic
+                                Group of
+                                America. Track details while also gaining a holistic view of your business.
+                            </p>
+                        </div>
                     </div>
                     <button type="button" class="btn-arrow-text">
                         <div class="arrow-Button"> <img src="/assets/images/Arrow-Link.svg" class="arrow" alt=""></div>
@@ -254,7 +275,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section class="section-Testimonial">
         <div class="container-fluid">
             <div class="Testimonials">
                 <div class="header">
@@ -275,9 +296,7 @@
                                 alt="...">
                             <div class="d-flex flex-column">
                                 <h5>Jaime Walsh</h5>
-                                <small class="small">Director of Business Development and IT Services,De La Torre
-                                    Orthotics and
-                                    Prosthetics, Inc.</small>
+                                <small class="small">Director of Compliance & Training, Epic Medical Solutions</small>
                             </div>
                         </div>
                     </div>
@@ -304,10 +323,10 @@
     <section>
         <div class="container-fluid">
             <div class="closer row">
-                <div class="imageGirl col-4">
+                <div class="imageGirl col-5">
                     <img src="/assets/images/image 7 (1).png" alt="" srcset="" class="girlPic">
                 </div>
-                <div class="graph-pic col-8">
+                <div class="graph-pic col-7">
                     <div class="BrightAction">
                         <p>
                             See Brightree in action
@@ -337,40 +356,61 @@
                         <div class="logo_hiring">
                             <img src="/assets/images/Bookmark.svg" alt="" srcset="" class="h_logo">
                         </div>
-                        <h3> We are hiring. </h3>
+                        We are hiring.
                     </div>
                 </div>
                 <div class="links d-flex ">
                     <div class="product_Links">
                         <h4> Products </h4>
 
-                        <h6> HME Software </h6>
-                        <h6> Pharmacy</h6>
-                        <h6> Orthotics & Prosthetics</h6>
+                        <a class="d-flex gap-3">
+                            <div> <svg xmlns="http://www.w3.org/2000/svg" width="12" height="6" viewBox="0 0 12 6"
+                                    fill="none">
+                                    <path
+                                        d="M8.67333 2.33325H0.666664V3.66659H8.67333V5.66659L11.3333 2.99992L8.67333 0.333252V2.33325Z"
+                                        fill="#009BDF" />
+                                </svg> </div> HME Software
+                        </a>
+                        <a class="d-flex gap-3">
+                            <div> <svg xmlns="http://www.w3.org/2000/svg" width="12" height="6" viewBox="0 0 12 6"
+                                    fill="none">
+                                    <path
+                                        d="M8.67333 2.33325H0.666664V3.66659H8.67333V5.66659L11.3333 2.99992L8.67333 0.333252V2.33325Z"
+                                        fill="#009BDF" />
+                                </svg> </div> Pharmacy
+                        </a>
+                        <a class="d-flex gap-3">
+                            <div> <svg xmlns="http://www.w3.org/2000/svg" width="12" height="6" viewBox="0 0 12 6"
+                                    fill="none">
+                                    <path
+                                        d="M8.67333 2.33325H0.666664V3.66659H8.67333V5.66659L11.3333 2.99992L8.67333 0.333252V2.33325Z"
+                                        fill="#009BDF" />
+                                </svg> </div>Orthotics & Prosthetics
+                        </a>
 
 
                     </div>
-                    <div class="community">
+                    <div class="community d-flex flex-column">
                         <h4> Community </h4>
 
-                        <h6> Resource </h6>
-                        <h6> Blog </h6>
-                        <h6> Events</h6>
+                        <a> Resource </a>
+                        <a> Blog </a>
+                        <a> Events</a>
 
                     </div>
-                    <div class="about">
+                    <div class="about d-flex flex-column">
                         <h4> About </h4>
 
-                        <h6> Privacy </h6>
-                        <h6> Security statement</h6>
-                        <h6> News</h6>
+                        <a> Privacy </a>
+                        <a> Security</a>
+                        <a> News</a>
 
                     </div>
-                    <div class="contact_us">
+                    <div class="contact_us d-flex flex-column">
                         <h4>Contact Us</h4>
-                        <h6>Twitter</h6>
-                        <h6> Facebook</h6>
-                        <h6>Linkdln</h6>
+                        <a>Twitter</a>
+                        <a> Facebook</a>
+                        <a>Linkdln</a>
 
                     </div>
                 </div>
